Sat Dec 11 22:45:46 2004  Tim Janik  <timj@gtk.org>

	* bsepart.c (bse_part_restore_private): parse velocity as int as well as float.

Sat Dec 11 15:35:16 2004  Tim Janik  <timj@gtk.org>

	* bseengine.[hc]: added block-size argument to probe callback.

	* bseenginemaster.c: properly probe unscheduled nodes. optimized
	probing by keeping a list of nodes with probe jobs.
	altered probe job value counter maintenance.
	clean up probe jobs upon discarding.

	* bseengineutils.c: assert NULL probe jobs on discarded nodes.

	* bseprobe.cc: properly handle probes from unscheduled nodes.

Fri Dec 10 15:24:35 2004  Tim Janik  <timj@gtk.org>

	* bseautodoc.c: fixed bugs, print out signals. print out
	all BSE objects.

	* bseprobe.idl, bseprobe.cc: deliver mix frequency with probes.

Mon Dec  6 23:46:11 2004  Tim Janik  <timj@gtk.org>

	* bseprobe.cc: block-size computation fixups. this fixes ffts beyond
	block boundaries.

Mon Dec  6 22:47:00 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* bseplugin.h: To allow implementing C-style plugins in C++ sources,
	as required for the PortAudio driver, declare extern "C" linkage for
	the symbol defined by BSE_DEFINE_EXPORTS when compiled within a C++
	source. The extern "C" code was taken from bsecxxplugin.h.

Fri Dec  3 21:31:26 2004  Tim Janik  <timj@gtk.org>

	* bsewaverepo.proc: don't override detailed errors.

	* gsldatahandle-mad.[hc]: provide GslErrorType errors instead of 
	strings. added gsl_data_handle_new_mad_err(), improved debugging.

	* gslloader-mad.c: pass on errors.

Mon Nov 29 21:45:25 2004  Tim Janik  <timj@gtk.org>

	* bseenginemaster.c: append probe jobs upon insertion, so probe data
	isn't mixed up between multiple probe jobs, and probe jobs are
	processed in order.

	* bseprobe.cc: normalize fft by multiplying with 1/n.

	* bseutils.[hc]: added bse_debug_dump_floats() to easily dump debugging
	wave data to a file in /tmp/.

Sat Nov 27 20:02:04 2004  Tim Janik  <timj@gtk.org>
